--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "tailwind.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "hugo server && tailwindcss -i ./assets/src/input.css -o ./assets/dist/output.css --watch",
-    "build": "hugo && tailwindcss -i ./assets/src/input.css -o ./assets/dist/output.css --minify"
+    "dev": "hugo server & tailwindcss -i ./assets/src/input.css -o ./assets/dist/output.css --watch",
+    "build": "hugo && tailwindcss -i ./assets/src/input.css -o ./assets/dist/output.css --cleanDestinationDir --minify",
+    "prod": "tailwindcss -i ./assets/src/input.css -o ./assets/dist/output.css --minify"
   },
   "keywords": [],
   "author": "",
