WIP disable taxonomies and terms

--- a/config.yaml
+++ b/config.yaml
@@ -7,6 +7,8 @@ title:          'Portfolio'
 #publishDir:     '/home/lin/SyncFree/FreePublic/docker-compose-lamp/www/Desktop/public-thierry'
 # Commenter obligatoirement pour netlify.
 
+disableKinds: ["taxonomy", "term"]
+
 googleAnalytics: G-1JM8DRG5K3
 
 # Content setup
