WIP change tag analytics

--- a/config.yaml
+++ b/config.yaml
@@ -9,7 +9,7 @@ title:          'Portfolio'
 
 disableKinds: ["taxonomy", "term"]
 
-googleAnalytics: G-1JM8DRG5K3
+googleAnalytics: G-KN4Z9JFEGK
 
 # Content setup
 paginate:       2
